# pylite3

./: .coveragerc  .gitignore  .gitmodules  404.html  MANIFEST.in  Makefile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  lite3-upstream-sync.yml  release.yml
api/: index.html
contributing/: index.html
design/: index.html
docs/: api.md  contributing.md  design.md  faq.md  index.md  installation.md  usage.md
examples/: benchmark.py  benchmark_robustness.py  compare_jsons.py
faq/: index.html
installation/: index.html
scripts/: bump_version.py  coverage.py
search/: search_index.json
src/: pylite3.pyi  pylite3.pyx
src/pylite3/: __init__.py  __init__.pyi
tests/: conftest.py  test_api_helpers.py  test_array.py  test_basic.py  test_buffers.py  test_dumps_memory.py  test_fallback.py  test_fuzz_roundtrip.py  test_hooks.py  test_object.py  test_version.py
usage/: index.html
